// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigTestCases css css-loader exported tests should work 1`] = `
Object {
  "default": "classes_module_css-default",
  "module": "classes_module_css-module",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 2`] = `
Object {
  "class": "composes-multiple_module_css-class composes-multiple_module_css-other-class composes-multiple_module_css-class-1 composes-multiple_module_css-class-2 alias_css-imported-alias alias-1_css-imported-alias-2 alias-1_css-imported-alias-3 global-class global-class-1 global-class-2",
  "class-1": "composes-multiple_module_css-class-1",
  "class-2": "composes-multiple_module_css-class-2",
  "class-other": "composes-multiple_module_css-class-other composes-multiple_module_css-other-class composes-multiple_module_css-class-1",
  "other-class": "composes-multiple_module_css-other-class",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 3`] = `
Object {
  "otherClassName": "composes-global_module_css-otherClassName global-class other-global-class",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 4`] = `
Object {
  "class-a": "scope-at-rule_module_css-class-a",
  "class-b": "scope-at-rule_module_css-class-b",
  "dark-scheme": "scope-at-rule_module_css-dark-scheme",
  "light-scheme": "scope-at-rule_module_css-light-scheme",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 5`] = `
Object {
  "a": "nesting_module_css-a",
  "b": "nesting_module_css-b nesting_module_css-a",
  "bar": "nesting_module_css-bar nesting_module_css-foo",
  "baz": "nesting_module_css-baz",
  "foo": "nesting_module_css-foo",
  "n": "nesting_module_css-n nesting_module_css-a",
  "notice": "nesting_module_css-notice",
  "notice-heading": "nesting_module_css-notice-heading",
  "success": "nesting_module_css-success",
  "success-heading": "nesting_module_css-success-heading",
  "warning": "nesting_module_css-warning",
  "warning-heading": "nesting_module_css-warning-heading",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 6`] = `
Object {
  "one": "prefer-relative_module_css-one package_one_css-imported-relative",
  "two": "prefer-relative_module_css-two node_modules_package_two_css-imported-relative",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 7`] = `
Object {
  "a": "animation-name_module_css-a",
  "animationName": "animation-name_module_css-animationName",
  "b": "animation-name_module_css-b",
  "c": "animation-name_module_css-c",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 8`] = `
Object {
  "myClass": "at-sign-in-package-name_module_css-myClass",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 9`] = `
Object {
  "color-grey": "gray",
  "copyright": "resolving-from-node_modules_module_css-copyright node_modules_@localpackage_style_css-type-heading",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 10`] = `
Object {
  "#": "local-Ident-name_module_css-#",
  "##": "local-Ident-name_module_css-##",
  "#.#.#": "local-Ident-name_module_css-#.#.#",
  "#fake-id": "local-Ident-name_module_css-#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "local-Ident-name_module_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "local-Ident-name_module_css--a-b-c-",
  "-a0-34a___f": "local-Ident-name_module_css--a0-34a___f",
  ".": "local-Ident-name_module_css-.",
  "123": "local-Ident-name_module_css-123",
  "1a2b3c": "local-Ident-name_module_css-1a2b3c",
  ":)": "local-Ident-name_module_css-:)",
  ":\`(": "local-Ident-name_module_css-:\`(",
  ":hover": "local-Ident-name_module_css-:hover",
  ":hover:focus:active": "local-Ident-name_module_css-:hover:focus:active",
  "<><<<>><>": "local-Ident-name_module_css-<><<<>><>",
  "<p>": "local-Ident-name_module_css-<p>",
  "?": "local-Ident-name_module_css-?",
  "@": "local-Ident-name_module_css-@",
  "B&W?": "local-Ident-name_module_css-B&W?",
  "[attr=value]": "local-Ident-name_module_css-[attr=value]",
  "_": "local-Ident-name_module_css-_",
  "_test": "local-Ident-name_module_css-_test",
  "className": "local-Ident-name_module_css-className",
  "f!o!o": "local-Ident-name_module_css-f!o!o",
  "f'o'o": "local-Ident-name_module_css-f'o'o",
  "f*o*o": "local-Ident-name_module_css-f*o*o",
  "f+o+o": "local-Ident-name_module_css-f+o+o",
  "f/o/o": "local-Ident-name_module_css-f/o/o",
  "f\\\\o\\\\o": "local-Ident-name_module_css-f\\\\o\\\\o",
  "foo.bar": "local-Ident-name_module_css-foo.bar",
  "foo/bar": "local-Ident-name_module_css-foo/bar",
  "foo/bar/baz": "local-Ident-name_module_css-foo/bar/baz",
  "foo\\\\bar": "local-Ident-name_module_css-foo\\\\bar",
  "foo\\\\bar\\\\baz": "local-Ident-name_module_css-foo\\\\bar\\\\baz",
  "f~o~o": "local-Ident-name_module_css-f~o~o",
  "m_x_@": "local-Ident-name_module_css-m_x_@",
  "someId": "local-Ident-name_module_css-someId",
  "subClass": "local-Ident-name_module_css-subClass",
  "test": "local-Ident-name_module_css-test",
  "{}": "local-Ident-name_module_css-{}",
  "©": "local-Ident-name_module_css-©",
  "“‘’”": "local-Ident-name_module_css-“‘’”",
  "⌘⌥": "local-Ident-name_module_css-⌘⌥",
  "☺☃": "local-Ident-name_module_css-☺☃",
  "♥": "local-Ident-name_module_css-♥",
  "𝄞♪♩♫♬": "local-Ident-name_module_css-𝄞♪♩♫♬",
  "💩": "local-Ident-name_module_css-💩",
  "😍": "local-Ident-name_module_css-😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 11`] = `
Array [
  "/*!********************************!*\\\\
  !*** css ./classes.module.css ***!
  \\\\********************************/
/* Tests from css-loader */

/* should work with the \`default\` class and with named export */
.classes_module_css-default {
	background: red
}


/* should work with the \`module\` class and with named export */
.classes_module_css-module {
	background: red
}

/*!***********************!*\\\\
  !*** css ./alias.css ***!
  \\\\***********************/
.alias_css-imported-alias {
  display: table;
}

/*!*************************!*\\\\
  !*** css ./alias-1.css ***!
  \\\\*************************/
.alias-1_css-imported-alias-2 {
  background: red;
}

.alias-1_css-imported-alias-3 {
  background: red;
}

/*!******************************************!*\\\\
  !*** css ./composes-multiple.module.css ***!
  \\\\******************************************/
.composes-multiple_module_css-other-class {
	color: red;
}

.composes-multiple_module_css-class-1 {
	color: blue;
}

.composes-multiple_module_css-class-2 {
	color: blue;
}

.global-class {
	padding: 10px;
}

.global-class-1 {
	padding: 10px;
}

.global-class-2 {
	padding: 10px;
}

.composes-multiple_module_css-class {
	color: gainsboro;
}

.composes-multiple_module_css-class-other {
	}


/*!****************************************!*\\\\
  !*** css ./composes-global.module.css ***!
  \\\\****************************************/
.global-class {
	color: red;
}

.other-global-class {
	color: red;
}

.composes-global_module_css-otherClassName {
	color: blue;
}

/*!**************************************!*\\\\
  !*** css ./scope-at-rule.module.css ***!
  \\\\**************************************/
@scope (.scope-at-rule_module_css-light-scheme) {
	:scope {
		background-color: plum;
	}

	.scope-at-rule_module_css-class-a {
		color: darkmagenta;
	}
}

@scope (.scope-at-rule_module_css-dark-scheme) {
	:scope {
		background-color: darkmagenta;
		color: antiquewhite;
	}

	.scope-at-rule_module_css-class-b {
		color: plum;
	}
}

@scope {
	:scope {
		color: red;
	}
}

/*!********************************!*\\\\
  !*** css ./nesting.module.css ***!
  \\\\********************************/
.nesting_module_css-notice {
	width: 90%;
	justify-content: center;
	border-radius: 1rem;
	border: black solid 2px;
	background-color: #ffc107;
	color: black;
	padding: 1rem;

	.nesting_module_css-notice-heading:before {
		/* equivalent to \`.notice .notice-heading:before\` */
		content: \\"ℹ︎ \\";
	}

	&.nesting_module_css-warning {
		/* equivalent to \`.notice.warning\` */
		background-color: #d81b60;
		border-color: #d81b60;
		color: white;
		.nesting_module_css-warning-heading:before {
			/* equivalent to \`.notice.warning .warning-heading:before\` */
			content: \\"! \\";
		}
	}

	&.nesting_module_css-success {
		/* equivalent to \`.notice.success\` */
		background-color: #004d40;
		border-color: #004d40;
		color: white;

		.nesting_module_css-success-heading:before {
			/* equivalent to \`.notice.success .success-heading:before\` */
			content: \\"✓ \\";
		}
	}
}

.nesting_module_css-foo {
	color: red;
}

.nesting_module_css-bar {
	&.nesting_module_css-baz {
		color: blue;
	}
}

.nesting_module_css-foo {
	display: grid;

	@media (orientation: landscape) {
		& {
			grid-auto-flow: column;
		}
	}
}

@media (orientation: landscape) {
	.nesting_module_css-a {
		color: red;
	}
}

@media (orientation: landscape) {
	@media (orientation: landscape) {
		.nesting_module_css-b {
			color: red;
			}
	}
}

.nesting_module_css-n {
	@media (orientation: landscape) {
		color: red;
	}
}

/*!*****************************!*\\\\
  !*** css ./package/one.css ***!
  \\\\*****************************/
.package_one_css-imported-relative {
    display: block;
}

/*!******************************************!*\\\\
  !*** css ./node_modules/package/two.css ***!
  \\\\******************************************/
.node_modules_package_two_css-imported-relative {
    display: inline;
}

/*!****************************************!*\\\\
  !*** css ./prefer-relative.module.css ***!
  \\\\****************************************/
.prefer-relative_module_css-one {
	color: yellow;
	}

.prefer-relative_module_css-two {
	color: yellow;
	}

/*!***************************************!*\\\\
  !*** css ./animation-name.module.css ***!
  \\\\***************************************/
.animation-name_module_css-a {
	animation: 3s animation-name_module_css-animationName;
}

.animation-name_module_css-b {
	animation: animation-name_module_css-animationName 3s;
}

.animation-name_module_css-c {
	animation-name: animation-name_module_css-animationName;
}

@keyframes animation-name_module_css-animationName {
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

/*!********************************************************!*\\\\
  !*** css ./node_modules/@foo/package/style.module.css ***!
  \\\\********************************************************/
.node_modules_\\\\@foo_package_style_module_css-class {
	color: red;
}

/*!*******************************************************!*\\\\
  !*** css ./node_modules/foo/package/style.module.css ***!
  \\\\*******************************************************/
.node_modules_foo_package_style_module_css-class {
	color: red;
}

/*!************************************************!*\\\\
  !*** css ./at-sign-in-package-name.module.css ***!
  \\\\************************************************/

.at-sign-in-package-name_module_css-myClass {
	color: red;
}

/*!**************************************************!*\\\\
  !*** css ./node_modules/@localpackage/color.css ***!
  \\\\**************************************************/


/*!*******************************************************!*\\\\
  !*** css ./node_modules/@otherlocalpackage/style.css ***!
  \\\\*******************************************************/
.node_modules_\\\\@otherlocalpackage_style_css-type-heading2 {
  display: flex;
}

/*!**************************************************!*\\\\
  !*** css ./node_modules/@localpackage/style.css ***!
  \\\\**************************************************/
.node_modules_\\\\@localpackage_style_css-type-heading {
  color: red;
  margin: 0;
  padding: 0;
}

/*!****************************************************!*\\\\
  !*** css ./resolving-from-node_modules.module.css ***!
  \\\\****************************************************/


.resolving-from-node_modules_module_css-copyright {
  color: gray;
  margin: 0;
  padding: 0;
}

/*!*****************************************!*\\\\
  !*** css ./local-Ident-name.module.css ***!
  \\\\*****************************************/
.local-Ident-name_module_css-test {
  background: red;
}

.local-Ident-name_module_css-_test {
  background: blue;
}

.local-Ident-name_module_css-className {
  background: red;
}

#local-Ident-name_module_css-someId {
  background: green;
}

.local-Ident-name_module_css-className .local-Ident-name_module_css-subClass {
  color: green;
}

#local-Ident-name_module_css-someId .local-Ident-name_module_css-subClass {
  color: blue;
}

.local-Ident-name_module_css--a0-34a___f {
  color: red;
}

.local-Ident-name_module_css-m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

.local-Ident-name_module_css-B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.local-Ident-name_module_css-\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.local-Ident-name_module_css-1a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#local-Ident-name_module_css-\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#local-Ident-name_module_css--a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#local-Ident-name_module_css-© {
  color: black;
}

.local-Ident-name_module_css-♥ { background: lime; }
.local-Ident-name_module_css-© { background: lime; }
.local-Ident-name_module_css-😍 { background: lime; }
.local-Ident-name_module_css-“‘’” { background: lime; }
.local-Ident-name_module_css-☺☃ { background: lime; }
.local-Ident-name_module_css-⌘⌥ { background: lime; }
.local-Ident-name_module_css-𝄞♪♩♫♬ { background: lime; }
.local-Ident-name_module_css-💩 { background: lime; }
.local-Ident-name_module_css-\\\\? { background: lime; }
.local-Ident-name_module_css-\\\\@ { background: lime; }
.local-Ident-name_module_css-\\\\. { background: lime; }
.local-Ident-name_module_css-\\\\:\\\\) { background: lime; }
.local-Ident-name_module_css-\\\\:\\\\\`\\\\( { background: lime; }
.local-Ident-name_module_css-123 { background: lime; }
.local-Ident-name_module_css-1a2b3c { background: lime; }
.local-Ident-name_module_css-\\\\<p\\\\> { background: lime; }
.local-Ident-name_module_css-\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.local-Ident-name_module_css-\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.local-Ident-name_module_css-\\\\# { background: lime; }
.local-Ident-name_module_css-\\\\#\\\\# { background: lime; }
.local-Ident-name_module_css-\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.local-Ident-name_module_css-_ { background: lime; }
.local-Ident-name_module_css-\\\\{\\\\} { background: lime; }
.local-Ident-name_module_css-\\\\#fake-id { background: lime; }
.local-Ident-name_module_css-foo\\\\.bar { background: lime; }
.local-Ident-name_module_css-\\\\:hover { background: lime; }
.local-Ident-name_module_css-\\\\:hover\\\\:focus\\\\:active { background: lime; }
.local-Ident-name_module_css-\\\\[attr\\\\=value\\\\] { background: lime; }
.local-Ident-name_module_css-f\\\\/o\\\\/o { background: lime; }
.local-Ident-name_module_css-f\\\\\\\\o\\\\\\\\o { background: lime; }
.local-Ident-name_module_css-f\\\\*o\\\\*o { background: lime; }
.local-Ident-name_module_css-f\\\\!o\\\\!o { background: lime; }
.local-Ident-name_module_css-f\\\\'o\\\\'o { background: lime; }
.local-Ident-name_module_css-f\\\\~o\\\\~o { background: lime; }
.local-Ident-name_module_css-f\\\\+o\\\\+o { background: lime; }

.local-Ident-name_module_css-foo\\\\/bar {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\\\\\bar {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\/bar\\\\/baz {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

",
]
`;
